chore(lint): create a build script to check the project can be compiled and is correctly linted

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
-    "**/.DS_Store": true
+    "**/.DS_Store": true,
+    "**/build": true
   },
   "editor.tabCompletion": true,
   "editor.formatOnSave": false,
