--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "config:local": "ncp config/local-config.ts config/testcafe-config.ts",
     "tsc": "tsc",
     "tsc:init": "tsc --init",
-    "tslint:init": "tslint --init"
+    "tslint:init": "tslint --init",
+    "lint": "tslint --format stylish --config tslint.json -e **/*.d.ts **/*.ts",
+    "prebuild": "rimraf build",
+    "build": "npm-run-all tsc lint"
   },
   "repository": {
     "type": "git",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "eslint": "4.11.0",
+    "npm-run-all": "4.1.2",
     "tslint": "5.8.0"
   }
 }
