--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "tslint:init": "tslint --init",
     "lint": "tslint --format stylish --config tslint.json -e **/*.d.ts **/*.ts",
     "prebuild": "rimraf build",
-    "build": "npm-run-all tsc lint"
+    "build": "npm-run-all tsc lint",
+    "install:snippets": "ncp step-snippets $HOME/.vscode/extensions/testcafe-starter-snippets"
   },
   "repository": {
     "type": "git",
@@ -46,5 +47,8 @@
     "eslint": "4.11.0",
     "npm-run-all": "4.1.2",
     "tslint": "5.8.0"
+  },
+  "engines": {
+    "vscode": "^1.18.0"
   }
 }
