--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-starter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,8 @@
     "lint": "tslint --format stylish --config tslint.json -e **/*.d.ts **/*.ts",
     "prebuild": "rimraf build",
     "build": "npm-run-all tsc lint",
-    "install:snippets": "ncp step-snippets $HOME/.vscode/extensions/testcafe-starter-snippets"
+    "install:snippets": "ncp step-snippets $HOME/.vscode/extensions/testcafe-starter-snippets",
+    "preinstall": "rimraf node_modules"
   },
   "repository": {
     "type": "git",
@@ -34,19 +35,19 @@
   },
   "homepage": "https://github.com/hdorgeval/testcafe-starter#readme",
   "dependencies": {
-    "@types/node": "8.0.53",
-    "cross-env": "5.1.1",
+    "@types/node": "9.4.0",
+    "cross-env": "5.1.3",
     "ncp": "2.0.0",
     "rimraf": "2.6.2",
-    "testcafe": "0.18.2",
+    "testcafe": "0.18.6",
     "testcafe-reporter-teamcity": "1.0.9",
-    "ts-node": "3.3.0",
-    "typescript": "2.6.1"
+    "ts-node": "4.1.0",
+    "typescript": "2.6.2"
   },
   "devDependencies": {
-    "eslint": "4.11.0",
+    "eslint": "4.16.0",
     "npm-run-all": "4.1.2",
-    "tslint": "5.8.0"
+    "tslint": "5.9.1"
   },
   "engines": {
     "vscode": "^1.18.0"
