--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "testcafe-starter",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
-    "testcafe": "testcafe chrome features/**/*.spec.ts --selector-timeout 10000 --screenshots-on-fail --screenshots ./screenshots",
     "pretest": "rimraf screenshots",
-    "test": "npm run config:local && npm run testcafe -- --debug-on-fail",
-    "test:teamcity": "npm run config:teamcity && npm run testcafe -- --reporter teamcity",
-    "config:teamcity": "ncp config/teamcity-config.ts config/testcafe-config.ts",
-    "config:local": "ncp config/local-config.ts config/testcafe-config.ts",
+    "test": "testcafe chrome features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --debug-on-fail",
+    "test:teamcity": "testcafe \"chrome --ignore-certificate-errors\" features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --reporter teamcity --screenshots-on-fail --screenshots ./screenshots --quarantine-mode",
     "tsc": "tsc",
     "tsc:init": "tsc --init",
     "tslint:init": "tslint --init",
@@ -35,8 +32,11 @@
   },
   "homepage": "https://github.com/hdorgeval/testcafe-starter#readme",
   "dependencies": {
+    "@types/minimist": "1.2.0",
     "@types/node": "9.4.0",
     "cross-env": "5.1.3",
+    "jsome": "2.3.26",
+    "minimist": "1.2.0",
     "ncp": "2.0.0",
     "rimraf": "2.6.2",
     "testcafe": "0.18.6",
