--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "testcafe-starter",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
     "pretest": "rimraf screenshots",
     "test": "testcafe chrome features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --debug-on-fail",
+    "test:live": "testcafe-live chrome features/**/*.live.ts --env=local --user=user1@example.com  --selector-timeout 10000",
     "test:teamcity": "testcafe \"chrome --ignore-certificate-errors\" features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --reporter teamcity --screenshots-on-fail --screenshots ./screenshots --quarantine-mode",
     "tsc": "tsc",
     "tsc:init": "tsc --init",
@@ -40,6 +41,7 @@
     "ncp": "2.0.0",
     "rimraf": "2.6.2",
     "testcafe": "0.18.6",
+    "testcafe-live": "0.1.1",
     "testcafe-reporter-teamcity": "1.0.9",
     "ts-node": "4.1.0",
     "typescript": "2.6.2"
