--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,16 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
+    {
+      "name": "Current TS File",
+      "type": "node",
+      "request": "launch",
+      "args": ["${relativeFile}"],
+      "runtimeArgs": ["-r", "ts-node/register"],
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
+      "internalConsoleOptions": "openOnSessionStart"
+    },
     {
       "type": "node",
       "protocol": "inspector",
@@ -15,7 +24,9 @@
         "chrome",
         "features/**/*.spec.ts",
         "--debug-on-fail",
-        "--selector-timeout 10000"
+        "--selector-timeout 10000",
+        "--reporter",
+        "cucumber-json"
         // setup the config/default-config.ts file before debugging
       ],
       "cwd": "${workspaceRoot}"
