--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/build": true
+    "**/build": true,
+    "node_modules": true
   },
   "editor.tabCompletion": true,
   "editor.formatOnSave": false,
