--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-starter",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,9 @@
     "prebuild": "rimraf build",
     "build": "npm-run-all tsc lint",
     "install:snippets": "ncp step-snippets $HOME/.vscode/extensions/testcafe-starter-snippets",
-    "preinstall": "rimraf node_modules"
+    "preinstall": "rimraf node_modules",
+    "pretestcafe-static-analyser": "rimraf reports",
+    "testcafe-static-analyser": "testcafe-static-analyser"
   },
   "repository": {
     "type": "git",
@@ -44,11 +46,12 @@
     "testcafe-live": "0.1.3",
     "testcafe-reporter-teamcity": "1.0.9",
     "ts-node": "5.0.1",
-    "typescript": "2.7.2"
+    "typescript": "2.8.1"
   },
   "devDependencies": {
     "eslint": "4.19.1",
     "npm-run-all": "4.1.2",
+    "testcafe-static-analyser": "0.1.0",
     "tslint": "5.9.1"
   },
   "engines": {
