--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "eslint": "5.0.1",
     "npm-run-all": "4.1.3",
+    "slash": "2.0.0",
     "testcafe-static-analyser": "0.2.4",
     "tslint": "5.10.0"
   },
