--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
 	// for the documentation about the extensions.json format
 	"recommendations": [
 		// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-		"hdorgeval.testcafe-snippets"
+		"hdorgeval.testcafe-snippets",
+		"romanresh.testcafe-test-runner"
 	]
 }
