--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "eslint": "5.2.0",
     "npm-run-all": "4.1.3",
+    "prettier": "1.13.7",
     "slash": "2.0.0",
     "testcafe-static-analyser": "0.2.4",
     "tslint": "5.11.0"
