--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-starter",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,10 @@
     "tsc:init": "tsc --init",
     "tslint:init": "tslint --init",
     "lint": "tslint --format stylish --config tslint.json -e **/*.d.ts **/*.ts",
+    "prettier-format": "prettier --write \"./**/*.ts\" ",
+    "prettier-check": "prettier --list-different \"./**/*.ts\" ",
     "prebuild": "rimraf build",
-    "build": "npm-run-all tsc lint",
+    "build": "npm-run-all prettier-format lint tsc",
     "preinstall": "rimraf node_modules",
     "pretestcafe-static-analyser": "rimraf reports",
     "testcafe-static-analyser": "testcafe-static-analyser",
@@ -51,13 +53,17 @@
   },
   "devDependencies": {
     "eslint": "5.2.0",
+    "husky": "0.14.3",
     "npm-run-all": "4.1.3",
     "prettier": "1.13.7",
     "slash": "2.0.0",
     "testcafe-static-analyser": "0.2.4",
-    "tslint": "5.11.0"
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.14.0",
+    "tslint-config-standard": "7.1.0"
   },
   "engines": {
-    "vscode": "^1.18.0"
+    "vscode": "^1.18.0",
+    "node": ">=6.0.0"
   }
 }
