--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,8 +3,7 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
+  "configurations": [{
       "name": "Current TS File",
       "type": "node",
       "request": "launch",
@@ -27,6 +26,15 @@
         "--selector-timeout 10000"
         // setup the config/default-config.ts file before debugging
       ],
+      "cwd": "${workspaceRoot}"
+    },
+    {
+      "type": "node",
+      "protocol": "inspector",
+      "request": "launch",
+      "name": "testcafe-static-analyser",
+      "program": "${workspaceRoot}/node_modules/testcafe-static-analyser/bin/testcafe-static-analyser.js",
+      "args": [],
       "cwd": "${workspaceRoot}"
     }
   ]
