--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "minimist": "1.2.0",
     "rimraf": "2.6.3",
     "slash": "2.0.0",
-    "testcafe": "0.23.2",
+    "testcafe": "1.0.0-alpha.4",
     "testcafe-reporter-teamcity": "1.0.10",
     "ts-node": "8.0.2",
     "typescript": "3.3.1"
