--- a/package.json
+++ b/package.json
@@ -36,26 +36,25 @@
   },
   "homepage": "https://github.com/hdorgeval/testcafe-starter#readme",
   "dependencies": {
-    "@types/chalk": "2.2.0",
     "@types/minimist": "1.2.0",
-    "@types/node": "10.12.21",
+    "@types/node": "11.11.0",
     "chalk": "2.4.2",
     "cross-env": "5.2.0",
     "jsome": "2.5.0",
     "minimist": "1.2.0",
     "rimraf": "2.6.3",
     "slash": "2.0.0",
-    "testcafe": "1.0.0-alpha.4",
+    "testcafe": "1.1.0",
     "testcafe-reporter-teamcity": "1.0.10",
-    "ts-node": "8.0.2",
-    "typescript": "3.3.1"
+    "ts-node": "8.0.3",
+    "typescript": "3.3.3333"
   },
   "devDependencies": {
-    "eslint": "5.13.0",
+    "eslint": "5.15.1",
     "prettier": "1.16.4",
     "testcafe-static-analyser": "1.1.0",
-    "tslint": "5.12.1",
-    "tslint-config-prettier": "1.17.0",
+    "tslint": "5.13.1",
+    "tslint-config-prettier": "1.18.0",
     "tslint-config-standard": "8.0.1"
   },
   "engines": {
