--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier-check": "prettier --list-different \"./**/*.ts\" ",
     "prebuild": "rimraf build",
     "build": "npm run prettier-format && npm run lint && npm run tsc",
-    "build-step-mappings": "ts-node step-mappings/generator"
+    "build-step-mappings": "ts-node step-mappings/generator",
+    "report": "ts-node report-generator.ts"
   },
   "repository": {
     "type": "git",
