--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc",
     "tsc:init": "tsc --init",
     "tslint:init": "tslint --init",
-    "lint": "tslint --format stylish --config tslint.json -e **/*.d.ts **/*.ts",
+    "lint": "eslint . --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives --ignore-pattern 'build/*' --ignore-pattern 'package/*' --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*'",
     "prettier-format": "prettier --write \"./**/*.ts\" ",
     "prettier-check": "prettier --list-different \"./**/*.ts\" ",
     "prebuild": "rimraf build",
@@ -47,19 +47,22 @@
     "testcafe": "1.3.3",
     "testcafe-reporter-cucumber-json": "1.2.0",
     "testcafe-reporter-teamcity": "1.0.10",
-    "ts-node": "8.2.0",
+    "ts-node": "8.3.0",
     "typescript": "3.5.3"
   },
   "devDependencies": {
-    "eslint": "5.16.0",
+    "@typescript-eslint/eslint-plugin": "1.13.0",
+    "@typescript-eslint/parser": "1.13.0",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-prettier": "3.1.0",
     "multiple-cucumber-html-reporter": "1.11.8",
-    "prettier": "1.16.4",
-    "tslint": "5.17.0",
+    "prettier": "1.18.2",
     "tslint-config-prettier": "1.18.0",
     "tslint-config-standard": "8.0.1"
   },
   "engines": {
     "vscode": "^1.18.0",
-    "node": ">=6.0.0"
+    "node": ">=6.4.0"
   }
 }
