chore(lint): remove tslint and fix lint script

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
 	"recommendations": [
 		// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
 		"hdorgeval.testcafe-snippets",
-		"romanresh.testcafe-test-runner"
+		"romanresh.testcafe-test-runner",
+		"esbenp.prettier-vscode",
+		"dbaeumer.vscode-eslint"
 	]
 }
