--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test:teamcity": "testcafe \"chrome --ignore-certificate-errors\" features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --reporter teamcity -S -s screenshots --quarantine-mode",
     "tsc": "tsc",
     "tsc:init": "tsc --init",
-    "tslint:init": "tslint --init",
-    "lint": "eslint . --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives --ignore-pattern 'build/*' --ignore-pattern 'package/*' --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*'",
+    "lint": "eslint ./ --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives --ignore-pattern 'build/*' --ignore-pattern 'package/*' --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*' --ignore-pattern 'reports/*'",
     "prettier-format": "prettier --write \"./**/*.ts\" ",
     "prettier-check": "prettier --list-different \"./**/*.ts\" ",
     "prebuild": "rimraf build",
@@ -57,9 +56,7 @@
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-prettier": "3.1.0",
     "multiple-cucumber-html-reporter": "1.11.8",
-    "prettier": "1.18.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-config-standard": "8.0.1"
+    "prettier": "1.18.2"
   },
   "engines": {
     "vscode": "^1.18.0",
