--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,10 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -24,7 +27,7 @@
       "modules": true
     }
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "import"],
   "rules": {
     "indent": ["error", 2, {
       "SwitchCase": 1
@@ -38,6 +41,9 @@
         "maxEOF": 1
       }
     ],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "import/order": ["error", {
+      "groups": ["index", "sibling", "parent", "internal", "external", "builtin"]
+    }]
   }
 }
