--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "1.13.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.0",
     "multiple-cucumber-html-reporter": "1.12.0",
     "prettier": "1.18.2"
