--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:teamcity": "testcafe \"chrome --ignore-certificate-errors\" features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --reporter teamcity -S -s screenshots --quarantine-mode",
     "tsc": "tsc",
     "tsc:init": "tsc --init",
-    "lint": "eslint ./ --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives --ignore-pattern 'build/*' --ignore-pattern 'package/*' --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*' --ignore-pattern 'reports/*'",
+    "lint": "eslint ./ --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives   --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*'",
     "prettier-format": "prettier --write \"./**/*.ts\" ",
     "prettier-check": "prettier --list-different \"./**/*.ts\" ",
     "prebuild": "rimraf build",
@@ -56,6 +56,7 @@
     "eslint-config-prettier": "6.5.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-testcafe": "0.2.1",
     "multiple-cucumber-html-reporter": "1.13.1",
     "prettier": "1.19.1"
   },
