chore(npm): update scripts in package.json

--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
+    "build-step-mappings": "ts-node step-mappings/generator",
+    "build": "npm run prettier-format && npm run lint && npm run tsc",
+    "eslint-fix": "eslint ./ --ext .js,.ts,.tsx --fix",
+    "lint": "eslint ./ --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives   --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*'",
+    "prebuild": "rimraf build",
     "pretest": "rimraf screenshots && rimraf reports",
-    "test": "testcafe chrome features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --debug-on-fail -S -s screenshots",
+    "prettier-check": "prettier --list-different \"./**/*.ts\" ",
+    "prettier-format": "prettier --write \"./**/*.ts\" ",
+    "report": "ts-node report-generator.ts",
     "test:json": "npm test -- --reporter cucumber-json:reports/report.json --reporter-app-name='My App' --reporter-app-version='x.y.z'",
     "test:live": "testcafe chrome features/**/*.live.ts --live --env=local --user=user1@example.com  --selector-timeout 10000",
     "test:teamcity": "testcafe \"chrome --ignore-certificate-errors\" features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --reporter teamcity -S -s screenshots --quarantine-mode",
-    "tsc": "tsc",
+    "test": "testcafe chrome features/**/*.spec.ts --env=local --user=user1@example.com  --selector-timeout 10000 --debug-on-fail -S -s screenshots",
     "tsc:init": "tsc --init",
-    "lint": "eslint ./ --ext .js,.ts --format visualstudio --no-color --max-warnings 10 --report-unused-disable-directives   --ignore-pattern 'coverage/*' --ignore-pattern 'node_modules/*'",
-    "prettier-format": "prettier --write \"./**/*.ts\" ",
-    "prettier-check": "prettier --list-different \"./**/*.ts\" ",
-    "prebuild": "rimraf build",
-    "build": "npm run prettier-format && npm run lint && npm run tsc",
-    "build-step-mappings": "ts-node step-mappings/generator",
-    "report": "ts-node report-generator.ts"
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
