--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-testcafe": "0.2.1",
+    "mem": "6.0.0",
     "multiple-cucumber-html-reporter": "1.13.1",
     "prettier": "1.19.1"
   },
